horizontal scroll fix

--- a/app/assets/stylesheets/dcv/dcv.css.scss
+++ b/app/assets/stylesheets/dcv/dcv.css.scss
@@ -5,7 +5,8 @@ input {
   /*color: #202020;*/
 }
 #outer-wrapper {
-  padding:0 10px 2em 10px;
+  padding-top:0;
+  padding-bottom:2em;
   margin-bottom:2em;
   background-color:rgb(36,36,36);
   border:1px solid #333;
@@ -77,8 +78,8 @@ input {
   }
 }
 #site-banner {
-  padding:0 12px 1.4em;
-  margin:0 -12px 20px;
+  padding:0 13px 1.4em;
+  margin:0 -13px 20px -14px;
   background-color:#111;
   border-bottom:1px solid #333;
   &.slim {
@@ -173,6 +174,9 @@ input {
   }
 }
 @media (min-width: 1200px) {
+  #outer-wrapper {
+    padding:0 10px 2em 10px;
+  }
   #outer-wrapper, #navbar-container {
     width:1190px;
   }
